Arc Browser Added, Fix Bug With Terms In FD
Arc Browser Is Now Added To The Browser you can download with one click on FD Page, also a fix for the Terms Of Service And Cookies Policy That Was Not Showing In The Correct Place

--- a/FD.css
+++ b/FD.css
@@ -1,9 +1,8 @@
 
 
 body {
-    background-image: url(https://dl.imgdrop.io/file/aed8b140-8472-4813-922b-7ce35ef93c9e/2024/07/25/qd_background-1ba449882aed2141f.png)  
+    background-image: url(https://github.com/DrPanayioths/helper/blob/main/icons/FastDownload/qd_background.png?raw=true)  
 }
-
 
 .skinbox {
     position: absolute;
@@ -49,7 +48,7 @@ body {
     z-index: 2;
     left: 14%;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
    
 }
 
@@ -69,7 +68,7 @@ body {
     left: 13%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
 }
 
 
@@ -89,7 +88,7 @@ body {
     left: 13%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
 }
 
 
@@ -101,7 +100,7 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    position: fixed;
+    position: absolute;
     height: auto;
     width: 400px;
     left: 11%;
@@ -109,7 +108,7 @@ body {
     opacity: 0.8;
     top: 268px;
     animation-name: bbwin;
-    animation-duration: 6s;
+    animation-duration: 2s;
     
 }
 
@@ -131,7 +130,7 @@ body {
     left: 13%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 6s;
+    animation-duration: 2s;
     
 
 }
@@ -155,7 +154,7 @@ body {
     left: 13%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 6s;
+    animation-duration: 2s;
 }
 
 
@@ -177,7 +176,7 @@ body {
     opacity: 1;
     z-index: 2;
     animation-name: bbwin;
-    animation-duration: 8s;
+    animation-duration: 2s;
 }
 
 .B_arch {
@@ -195,7 +194,7 @@ body {
     left: 13%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 9s;
+    animation-duration: 2s;
     outline: black solid 2px;
  
 }
@@ -216,7 +215,7 @@ body {
     left: 13%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 8s;  
+    animation-duration: 2s;
 }
 
 /* Github */
@@ -236,7 +235,7 @@ body {
     right: 17%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
 
 }
 
@@ -252,7 +251,7 @@ body {
     top: 180px;
     right: 18%;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
     height: 75px;
 }
 
@@ -271,7 +270,7 @@ body {
     width: 340px;
     height: 100px;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
     top: 168px;
     right: 17%;
 }
@@ -293,7 +292,7 @@ body {
     right: 17%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
 }
 
 
@@ -309,7 +308,7 @@ body {
     top: 253px;
     right: 15.5%;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
     height: 195px;
     width: 390px;
     
@@ -327,7 +326,7 @@ body {
     width: 340px;
     height: 100px;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
     top: 300px;
     right: 17%;
     border-radius: 10px;
@@ -398,7 +397,7 @@ body {
     right: 17%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
 }
 
 
@@ -414,7 +413,7 @@ body {
     top: 365px;
     right: 17%;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
     height: 240px;
 }
 
@@ -430,7 +429,7 @@ body {
     width: 340px;
     height: 100px;
     animation-name: bbwin;
-    animation-duration: 3s;
+    animation-duration: 2s;
     top: 430px;
     right: 17%;
 }
@@ -474,40 +473,71 @@ body {
 
 /* Browsers */
 
-.back_browsers {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+/* Chrome */
+.chrome_background {
     user-select: none;
     position: absolute;
     width: 340px;
     height: 120px;
     background-color: rgba(31, 31, 31, 0.6);
-    top: 850px;
+    bottom: 2%;
     left: 13%;
     border-radius: 10px;
     animation-name: bbwin;
-    animation-duration: 9s;
+    animation-duration: 2s;
     outline: black solid 2px;
- 
 }
 
 .chrome_browser {
+    pointer-events: none;
+    user-select: none;
     position: absolute;
-    height: 180px;
-    bottom: -35px;
-    left: 10px;
+    height: 90px;
+    top: 15px;
+    left: 1px;
     cursor: pointer;
-    width: 320px;
+    z-index: 2;
+    animation-name: bbwin;
+    animation-duration: 2s;
+}
+
+/* Arc Browser */
+.arc_background {
+    user-select: none;
+    position: absolute;
+    height: 120px;
+    width: 300px;
+    background-color: rgba(31, 31, 31, 0.6);
+    bottom: 2%;
+    left: 50%;
+    transform: translateX(-50%);
+    border-radius: 10px;
+    animation-name: bbwin;
+    animation-duration: 2s;
+    outline: black solid 2px;
+    z-index: 1;
 }
 
 .arc_browser {
+    pointer-events: none;
+    user-select: none;
     position: absolute;
-    height: 70px;
-    bottom: -35px;
-    left: 50%;
-    transform: translateX(-50%);
+    height: 100px;
+    top: 10px;
+    left: 1px;
+    border-radius: 10px;
+    animation-name: bbwin;
+    z-index: 2;
     cursor: pointer;
+}
+
+.arc_name {
+    position: absolute;
+    top: 20px;
+    left: 120px;
+    font-size: 70px;
+    font-family: "Lilita One", sans-serif;
+    background: linear-gradient(to right,#FE9395 0%,#FF5067 100%);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
